fix scrollbar shift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@
     padding: 0;
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
